--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,9 +19,11 @@ jobs:
     - uses: actions/checkout@v2
     - run: gem install fastlane
     - run: fastlane gym --configuration Debug --skip_archive --scheme 'WatchFaceDumper'
-    - run: find /Users/runner/Library/Developer/Xcode/DerivedData -name WatchFaceDumper.app
+    - name: app location
+      id: vars
+      run: echo "loc=$(find /Users/runner/Library/Developer/Xcode/DerivedData -name WatchFaceDumper.app)" >> $GITHUB_OUTPUT
     - name: Archive build dir
       uses: actions/upload-artifact@v3
       with:
         name: build_dir
-        path: /Users/runner/Library/Developer/Xcode/DerivedData/
+        path: ${{steps.vars.outputs.loc}}
